# cinnabar

./: .clang-tidy  .zsh  CMakeLists.txt  README.md  asd  cinnabar.code-workspace  foo.py  foo2.json  material_grabber.py  todo.md
res/: chr_knight.vox  dragon.vox  sebstree.vox
src/: hello_world.slang  log.hpp  main.cpp  slang_compiler.cpp  slang_compiler.hpp  temporary_game_state.cpp  temporary_game_state.hpp  triangle.slang  util.hpp
src/game/: game.cpp  game.hpp
src/gfx/: camera.cpp  camera.hpp  frame_generator.cpp  frame_generator.hpp  slang_compiler.cpp  slang_compiler.hpp  transform.cpp  transform.hpp  voxel_world_manager.cpp  voxel_world_manager.hpp
src/gfx/core/: renderer.cpp  renderer.hpp  window.cpp  window.hpp
src/gfx/core/vulkan/: allocator.cpp  allocator.hpp  buffer.cpp  buffer.hpp  descriptor_manager.cpp  descriptor_manager.hpp  device.cpp  device.hpp  frame_manager.cpp  frame_manager.hpp  image.cpp  image.hpp  instance.cpp  instance.hpp  pipeline_manager.cpp  pipeline_manager.hpp  swapchain.cpp  swapchain.hpp
src/gfx/generators/: generator.cpp  generator.hpp
src/gfx/generators/imgui/: imgui_renderer.cpp  imgui_renderer.hpp  menu_color_transfer.frag  menu_color_transfer.slang
src/gfx/generators/skybox/: skybox.frag  skybox.slang  skybox.vert  skybox_renderer.cpp  skybox_renderer.hpp
src/gfx/generators/triangle/: triangle.frag  triangle.slang  triangle.vert  triangle_renderer.cpp  triangle_renderer.hpp
src/gfx/generators/voxel/: data_structures.hpp  emissive_integer_tree.cpp  emissive_integer_tree.hpp  generator.cpp  generator.hpp  gif_read.cpp  gif_read.h  light_influence_storage.cpp  light_influence_storage.hpp  material.cpp  material.hpp  model.cpp  model.hpp  shared_data_structures.slang  voxel.frag  voxel.vert  voxel_color_calculation.comp  voxel_color_calculation.slang  voxel_color_transfer.frag  voxel_color_transfer.slang  voxel_color_transfer.vert  voxel_faces.slang  voxel_hash_map_normalizer.slang  voxel_material.slang  voxel_object_manager.hpp  voxel_prepass.frag  voxel_prepass.slang  voxel_prepass.vert  voxel_renderer.cpp  voxel_renderer.hpp  voxel_tracing.slang  voxel_world.hpp
src/gfx/generators/voxel/scenes/: scene.hpp
src/gfx/render/: renderer.cpp  renderer.hpp  window.cpp  window.hpp
src/gfx/render/vulkan/: allocator.cpp  allocator.hpp  buffer.cpp  buffer.hpp  descriptor_manager.cpp  descriptor_manager.hpp  device.cpp  device.hpp  frame_manager.cpp  frame_manager.hpp  image.cpp  image.hpp  instance.cpp  instance.hpp  pipeline_manager.cpp  pipeline_manager.hpp  swapchain.cpp  swapchain.hpp
src/gfx/renderables/: renderable.cpp  renderable.hpp  renderables.hpp
src/gfx/renderables/triangle/: triangle.vert  triangle_renderer.cpp  triangle_renderer.hpp
src/gfx/renderables/voxel/: voxel_renderer.hpp
src/gfx/shader_common/: binding_offsets.glsl  bindings.slang  cube_ray.slang  globals.glsl  globals.slang  intersectables.glsl  misc.glsl  sebs.slang  skybox_common.slang  types.glsl  voxel_faces.glsl  voxel_material.glsl  voxel_tracing.glsl
src/gfx/shaders/: triangle.frag  triangle.vert
src/storage/: sebs.slang
src/util/: events.cpp  events.hpp  gif.cpp  gif.hpp  logger.cpp  logger.hpp  task_generator.hpp  threads.hpp  timer.cpp  timer.hpp  util.cpp  util.hpp  uuid.hpp
src/util/allocators/: index_allocator.cpp  index_allocator.hpp  opaque_integer_handle_allocator.hpp  range_allocator.cpp  range_allocator.hpp
